welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:3: error: '(' expected but 'if' found.
	else if if ( isSummer && temp >= 60 && temp <=100 ) return true
                ^squirrelPlay:6: error: illegal start of simple expression
}
^